--- a/OpenOCDConfig/download.cfg
+++ b/OpenOCDConfig/download.cfg
@@ -1,2 +1,2 @@
-source [find Config/stlink-v2.cfg]
-source [find Config/stm32g4x.cfg]
+source [find OpenOCDConfig/stlink-v2.cfg]
+source [find OpenOCDConfig/stm32g4x.cfg]
